--- a/src/components/Row/Row.css
+++ b/src/components/Row/Row.css
@@ -1,8 +1,35 @@
-.imagens img{
-    width: 10%;
-    height: 10%;
+.row-container {
+    margin-left: 20px;
+    color: white;
 }
 
-.large{
-    width: 80% !important;
+.row-cards::-webkit-scrollbar {
+    display: none;
+}
+
+.row-cards {
+    display: flex;
+    overflow-y: hidden;
+    overflow-x: scroll;
+    padding: 20px; 
+}
+
+.movie-card {
+    object-fit: contain;
+    width: 100%;
+    max-height: 100px;
+    margin-bottom: 10px;
+    transition: transform 450ms;
+}
+
+.movie-card-large {
+    object-fit: contain;
+    width: 100%;
+    max-height: 250px;
+    margin-bottom: 10px;
+    transition: transform 450ms;
+}
+
+.movie-card:hover {
+    transform: scale(1.08);
 }
